fix: hide account on tablet+

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -76,6 +76,12 @@
   &__account {
     background-color: mixin.$gray100;
     border-color: #ffffff00;
+
+    display: none;
+
+    @include mixin.on-tablet {
+      display: block;
+    }
   }
 
   &__login {
